force-app/main/default/objects/Assignment_Queue_Member__c/Assignment_Queue_Member__c.object-meta.xml
<CustomObject>
    <label>Assignment Queue Member</label>
    <nameField>
        <displayFormat>Member-{0000}</displayFormat>
        <label>Assignment Queue Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment Queue Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>