force-app/main/default/objects/Assignment_Queue_Member__c/fields/Assignment_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Queue__c</fullName>
    <label>Assignment Queue</label>
    <referenceTo>Assignment_Queue__c</referenceTo>
    <relationshipLabel>Assignment Queue Members</relationshipLabel>
    <relationshipName>Assignment_Queue_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>