force-app/main/default/objects/Assignment_Queue_Member__c/fields/Last_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Last_Assignment__c</fullName>
    <label>Last Assignment</label>
    <type>DateTime</type>
</CustomField>