force-app/main/default/objects/Assignment_Queue_Member__c/fields/Member_Active__c.field-meta.xml
<CustomField>
    <fullName>Member_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Member Active</label>
    <type>Checkbox</type>
</CustomField>