force-app/main/default/objects/Assignment_Queue_Member__c/fields/Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Status__c</fullName>
    <formula>IF(User_Active__c &amp;&amp; Member_Active__c,'Valid','Invalid')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Status</label>
    <type>Text</type>
</CustomField>