force-app/main/default/objects/Assignment_Queue_Member__c/fields/User_Active__c.field-meta.xml
<CustomField>
    <fullName>User_Active__c</fullName>
    <formula>IF(User__r.IsActive,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Active</label>
    <type>Checkbox</type>
</CustomField>