force-app/main/default/objects/Assignment_Queue_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>User_Name__c</columns>
    <columns>Last_Assignment__c</columns>
    <columns>Millisecond__c</columns>
    <columns>Member_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>